third_party/move/move-compiler-v2/tests/more-v1/parser/let_binding_missing_semicolon.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/let_binding_missing_semicolon.move:4:5
  │
4 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected ';'
